Project pos_api {
  database_type: "MySQL"
  Note: "Point of Sale API database schema"
}

Enum order_status {
  pending
  paid
  cancelled
}

Enum payment_method {
  cash
  card
}

Enum payment_status {
  pending
  paid
  failed
}

Table products {
  id int [pk, increment]
  name varchar(255) [not null]
  description varchar(255) [not null]
  category varchar(255) [not null]
  price decimal(10,2) [not null]
  cost_price decimal(10,2) [not null]
  stock_quantity int [not null, default: 0]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table add_ons {
  id int [pk, increment]
  name varchar(255) [not null]
  description varchar(255) [not null]
  price decimal(10,2) [not null]
  cost_price decimal(10,2) [not null]
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table product_add_ons {
  id int [pk, increment]
  product_id int [not null]
  add_on_id int [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]

  indexes {
    (product_id, add_on_id) [unique, name: "unique_product_add_on"]
  }
}

Table orders {
  id int [pk, increment]
  order_number varchar(255) [not null, unique]
  customer_name varchar(255) [not null]
  status order_status [not null, default: "pending"]
  subtotal decimal(10,2) [not null, default: 0]
  discount decimal(10,2) [not null, default: 0]
  tax decimal(10,2) [not null, default: 0]
  total decimal(10,2) [not null, default: 0]
  notes text
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table order_items {
  id int [pk, increment]
  order_id int [not null]
  product_id int [not null]
  product_name varchar(255) [not null, note: "Snapshot of product name when order is created"]
  quantity int [not null]
  unit_price decimal(10,2) [not null, note: "Snapshot of product selling price"]
  unit_cost decimal(10,2) [not null, note: "Snapshot of product cost price"]
  subtotal decimal(10,2) [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table order_item_add_ons {
  id int [pk, increment]
  order_item_id int [not null]
  add_on_id int [not null]
  add_on_name varchar(255) [not null, note: "Snapshot of add-on name when order is created"]
  quantity int [not null]
  unit_price decimal(10,2) [not null, note: "Snapshot of add-on selling price"]
  unit_cost decimal(10,2) [not null, note: "Snapshot of add-on cost price"]
  subtotal decimal(10,2) [not null]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Table payments {
  id int [pk, increment]
  order_id int [not null]
  payment_method payment_method [not null, default: "cash"]
  payment_status payment_status [not null, default: "pending"]
  amount decimal(10,2) [not null, default: 0]
  change_amount decimal(10,2) [not null, default: 0]
  paid_at timestamp
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`, note: "ON UPDATE CURRENT_TIMESTAMP"]
}

Ref: product_add_ons.product_id > products.id
Ref: product_add_ons.add_on_id > add_ons.id

Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id

Ref: order_item_add_ons.order_item_id > order_items.id
Ref: order_item_add_ons.add_on_id > add_ons.id

Ref: payments.order_id > orders.id
